--- a/src/components/Pagination/Pagination.css
+++ b/src/components/Pagination/Pagination.css
@@ -1,7 +1,7 @@
 .pokedex__footer{
   display: flex;
   justify-content: space-between;
-  margin: 15px 0;
+  margin: 15px 0 25px 10px;
   align-items: baseline;
 }
 
