--- a/src/components/Pokemon/Pokemons.css
+++ b/src/components/Pokemon/Pokemons.css
@@ -40,5 +40,15 @@
     text-align: justify;
 }
 
+@media screen and ( max-width: 850px ){
+
+    .pokedex__aside{
+      width: 100%;
+      height: 550px;
+      background: antiquewhite;
+    }
+    
+  }
+  
 
 
